Implemented bar chart for counties

--- a/census.css
+++ b/census.css
@@ -218,7 +218,7 @@ select {
 }
 
 #distributionByHousehold>#housesData,
-#mostPopulationPerCouunty {
+#mostPopulatedCounties {
     background-color: white;
     border-radius: 5px;
     box-shadow: 2px 3px rgba(173, 171, 171, 0.533);
@@ -232,7 +232,7 @@ select {
     border-radius: 5px;
 }
 
-#mostPopulationPerCouunty {
+#mostPopulatedCounties {
     padding: 2%;
     text-align: left;
 }
